test/tests/errors/error-for-step-not-int2.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 0;
    for (x = 0 step false until 10) {}
}